[package]
name = "rust-sketches"
version = "0.1.0"
authors = ["Alessia Bellisario <github@bellisar.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { git = "https://github.com/mitchmindtree/nannou", branch = "publish" }
fart = "0.3"
